--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Un document</title>
+    <link href="style.css" />
 </head>
 <body>
     <h1>Un premier extrait de document</h1>
+    <p>Une modification ici faites par Yannick</p>
 </body>
 </html>
